# picowriter

./: .gitignore  CMakeLists.txt  README.md
src/picowriter/: Makefile  eink.c  hid_app.c  kilo.c  picowriter.c  picowriter2.c  tusb_config.h
src/test/: CMakeLists.txt  multicore.c  usb_host_hid.c
src/waveshare_eink/c/: main.c
src/waveshare_eink/c/examples/: EPD_Test.h  ImageData.c
src/waveshare_eink/c/lib/e-Paper/: EPD_2in9_V2.c
